RESOLVED FIXED 246463
Screen orientation tests are flaky time outs on iOS simulator
https://bugs.webkit.org/show_bug.cgi?id=246463
Summary Screen orientation tests are flaky time outs on iOS simulator
Chris Dumez
Reported 2022-10-13 09:17:16 PDT
Screen orientation tests are flaky time outs on iOS simulator since they started running on this platform.
Attachments
Radar WebKit Bug Importer
Comment 1 2022-10-13 09:18:44 PDT
Chris Dumez
Comment 2 2022-10-13 09:20:35 PDT
EWS
Comment 3 2022-10-13 09:23:05 PDT
Committed 255483@main (14e8bb28fdc9): <https://commits.webkit.org/255483@main> Reviewed commits have been landed. Closing PR #5331 and removing active labels.
Chris Dumez
Comment 4 2022-10-13 16:53:23 PDT
Re-opening for pull request https://github.com/WebKit/WebKit/pull/5355
EWS
Comment 5 2022-10-13 22:32:01 PDT
Committed 255524@main (5d097316d340): <https://commits.webkit.org/255524@main> Reviewed commits have been landed. Closing PR #5355 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.