Screen orientation tests are flaky time outs on iOS simulator https://bugs.webkit.org/show_bug.cgi?id=246463 rdar://101130157

Reviewed by Wenson Hsieh.

When running a screen orientation test after a test using the flexible viewport
option, it would fail to change/lock the interface orientation and thus timeout
while waiting for the orientation to change.

The reason for this is that UIKit prioritizes the top-most scene-sized window
when determining the interface orientation. Regular tests have a window that
is not scene sized while flexible viewport ones do. As a result, the window
from the flexible viewport test *BEHIND* the current screen-orientation test
window would be used to determine the interface orientation.

To address the issue, we now hide the PlatformWebView's window when the
PlaformWebView gets destroyed, so it is no longer visible in the background
when we switch to a new PlaformWebView for the next test.

* LayoutTests/platform/ios-wk2/TestExpectations:
* Tools/WebKitTestRunner/ios/PlatformWebViewIOS.mm:
(WTR::PlatformWebView::~PlatformWebView):
* Tools/WebKitTestRunner/ios/TestControllerIOS.mm:
(WTR::TestController::lockScreenOrientation):

Canonical link: https://commits.webkit.org/255524@main